--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Password</title>
 </head>
 <body>
-    
+    <p>La tua password è <span id="password"></span>21</p>
 
 
     <script src="script/script.js"></script>
