--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Password</title>
 </head>
 <body>
-    <p>La password cosnigliata è <span id="password"></span>21</p>
-
+        <p>La password consigliata è <span id="password"></span>21</p>
 
     <script src="script/script.js"></script>
 </body>
