--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-        <p>La password consigliata è <span id="password"></span>21</p>
+    <div class="page-center">
+        <div class="container">
+            <p>La password consigliata è <span id="password"></span>21</p>
+            <form>
+                <label for="new-password">Se non ti piace scrivi un'altra password</label>
+                <input id="new-password" type="password" disabled>
+            </form>
+            <img src="https://www.dagospia.com/img/foto/12-2016/gatto-per-il-no-meme-856700.png" alt="">
+        </div>
+    </div>
 
     <script src="script/script.js"></script>
 </body>
